# Majin

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: MajinConfig.cmake  MajinGlobals.cmake
cmake/scripts/: Fetch-GoogleTest.cmake  add-compile-commands-dir.cmake  add-compile-commands-target.cmake  add-gtest-test.cmake  add-test.cmake  cache-var.cmake  timestamp.cmake
cmake/toolchain/: Windows-x86_64.cmake
source/: CMakeLists.txt
source/lib/buffer/: CMakeLists.txt  buffer.cxx
source/lib/buffer/include/: buffer.hxx  iterator.hxx
test/: CMakeLists.txt  buffer.test.cxx
tools/: Configure-Majin-Project.ps1
